--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "serve-favicon": "~2.3.0",
     "superagent": "^1.4.0",
     "underscore": "1.8.3",
-    "vis": "^4.9.0"
+    "vis": "^4.9.0",
+    "winston": "^2.1.0"
   }
 }
